--- a/src/app/pages/global-khitma/global-khitma.component.html
+++ b/src/app/pages/global-khitma/global-khitma.component.html
@@ -60,6 +60,11 @@
     </app-todo>
 
 
+    <button id="reset-khitma-btn" mat-stroked-button (click)="resetKhitma()">
+        <span>هل أتممت الختمة؟</span>
+    </button>
+
+
     <ng-template #ramadanNotStartedYet>
         <label>نبدأ ختمتنا مع أوّل أيّام رمضان إن شاء الله</label>
     </ng-template>
