--- a/src/app/pages/create-group/create-group.component.html
+++ b/src/app/pages/create-group/create-group.component.html
@@ -1,8 +1,12 @@
 <section>
-    <header>إنشاء مجموعة جديدة</header>
+    <header>
+
+        {{isRecurring ? "مجموعة ختمة دوريّة" : "ختمة جماعيّة لمرّة واحدة"}}
 
 
-    <div class="center-center multi-choice">
+    </header>
+
+    <div class="center-center multi-choice" *ngIf="!typeParam">
 
         <mat-button-toggle-group [(ngModel)]="isRecurring">
 
@@ -32,54 +36,12 @@
         إن شاء الله.
     </p>
 
-    <p *ngIf="!isRecurring"> تنتهي المجموعة عند انتهاء ختمة واحدة كاملة. مناسب مثلا للختمات العائليّة عن
+    <p *ngIf="!isRecurring">
+        مناسب للختمات العائليّة عن
         أرواح
         الموتى (رحمهم الله) أو في بيوت العزاء أو ختمات خلال المناسبات والنشاطات المختلفة. </p>
 
 
-    <section *ngIf="isRecurring">
-
-        <h2>نوع الختمة الدوريّة</h2>
-        <div class="center-center multi-choice">
-
-            <mat-button-toggle-group [(ngModel)]="groupType">
-
-                <mat-button-toggle [value]="KHITMA_GROUP_TYPE.SAME_TASK">
-                    <label class="center-center">
-                        <mat-icon>layers</mat-icon> <span>ختمة موحّدة</span>
-                    </label>
-                </mat-button-toggle>
-
-                <mat-button-toggle [value]="KHITMA_GROUP_TYPE.SEQUENTIAL">
-                    <label class="center-center">
-                        <mat-icon>linear_scale</mat-icon> <span>أجزاء متتابعة</span>
-                    </label>
-                </mat-button-toggle>
-
-            </mat-button-toggle-group>
-
-
-        </div>
-
-
-        <p *ngIf="groupType  === KHITMA_GROUP_TYPE.SAME_TASK">
-
-            جميع الأعضاء يتشاركون في نفس المهمّة خلال فترة محدّدة. مثلا: جميع الأعضاء يقرؤون الجزء الأوّل في اليوم
-            الأوّل
-            والجزء الثاني في اليوم الثاني وهكذا. في هذا النوع من الختمة يمكن لمسؤول الختمة تحديد المهمّة والفترة بشكل
-            مرن،
-            فيمكن مثلا عمل مجموعة لقراءة خمس صفحات في اليوم (للأطفال مثلا) أو عمل مجموعة تقرأ جزئين أو ثلاثة في اليوم أو
-            مجموعة تتم ختمة كاملة بشكل أسبوعي الخ...
-        </p>
-
-        <p *ngIf="groupType  === KHITMA_GROUP_TYPE.SEQUENTIAL">
-
-            في هذه الختمة يقوم كل عضو في المجموعة بتلاوة أحد الأجزاء بحيث أنّ المجموعة مكتملة تتم ختمة كاملة، لإهدائها
-            لروح أحد المتوفّيْن مثلا. في حال كانت الختمة دوريّة فإنّ التطبيق يتيح امكانيّة تعيين الجزء التالي لكل عضور
-            بشكل تلقائي وكذلك مشاركة رسالة وتسأب فيها حالة الجزء التابع لكل عضو.
-        </p>
-
-    </section>
 
     <form (ngSubmit)="createGroup()" #createGroupForm="ngForm">
 
@@ -91,24 +53,85 @@
         </mat-form-field>
 
         <mat-form-field appearance="fill" class="block">
-            <mat-label>اسمك (مسؤول المجموعة)</mat-label>
+            <mat-label>اسمك (مسؤول الختمة)</mat-label>
             <input matInput [(ngModel)]="author" name="author" required="true" autocomplete="off">
         </mat-form-field>
 
-        <mat-form-field appearance="fill" class="block" *ngIf="groupType === KHITMA_GROUP_TYPE.SAME_TASK">
-            <mat-label>المهمّة الأولى</mat-label>
-            <input matInput [(ngModel)]="firstTask" name="firstTask" required="true" autocomplete="off"
-                placeholder="مثلا: الجزء الأوّل، أو صفحة 1-10">
-        </mat-form-field>
 
         <mat-form-field appearance="fill" class="block">
             <mat-label>نص إضافي (اختياري)</mat-label>
             <textarea rows="4" matInput [(ngModel)]="description" name="description"></textarea>
         </mat-form-field>
 
+
+
+        <section *ngIf="isRecurring">
+
+            <h2>نوع الختمة الدوريّة</h2>
+            <div class="center-center multi-choice">
+
+                <mat-button-toggle-group [(ngModel)]="groupType" name="groupType">
+
+                    <mat-button-toggle [value]="KHITMA_GROUP_TYPE.SAME_TASK">
+                        <label class="center-center">
+                            <mat-icon>layers</mat-icon> <span>ختمة موحّدة</span>
+                        </label>
+                    </mat-button-toggle>
+
+                    <mat-button-toggle [value]="KHITMA_GROUP_TYPE.SEQUENTIAL">
+                        <label class="center-center">
+                            <mat-icon>linear_scale</mat-icon> <span>أجزاء متتابعة</span>
+                        </label>
+                    </mat-button-toggle>
+
+                </mat-button-toggle-group>
+
+
+            </div>
+
+
+            <p *ngIf="groupType  === KHITMA_GROUP_TYPE.SAME_TASK">
+
+                جميع الأعضاء يتشاركون في نفس المهمّة خلال فترة محدّدة. مثلا: جميع الأعضاء يقرؤون الجزء الأوّل في اليوم
+                الأوّل
+                والجزء الثاني في اليوم الثاني وهكذا. في هذا النوع من الختمة يمكن لمسؤول الختمة تحديد المهمّة والفترة
+                بشكل
+                مرن،
+                فيمكن مثلا عمل مجموعة لقراءة خمس صفحات في اليوم (للأطفال مثلا) أو عمل مجموعة تقرأ جزئين أو ثلاثة في
+                اليوم أو
+                مجموعة تتم ختمة كاملة بشكل أسبوعي الخ...
+            </p>
+
+            <p *ngIf="groupType  === KHITMA_GROUP_TYPE.SEQUENTIAL">
+
+                في هذه الختمة يقوم كل عضو في المجموعة بتلاوة أحد الأجزاء بحيث أنّ المجموعة مكتملة تتم ختمة كاملة،
+                لإهدائها
+                لروح أحد المتوفّيْن مثلا. في حال كانت الختمة دوريّة فإنّ التطبيق يتيح امكانيّة تعيين الجزء التالي لكل
+                عضور
+                بشكل تلقائي وكذلك مشاركة رسالة وتسأب فيها حالة الجزء التابع لكل عضو.
+            </p>
+
+
+            <mat-form-field appearance="fill" class="block" *ngIf="groupType === KHITMA_GROUP_TYPE.SAME_TASK">
+                <mat-label>المهمّة الأولى</mat-label>
+                <input matInput [(ngModel)]="firstTask" name="firstTask" required="true" autocomplete="off"
+                    placeholder="مثلا: الجزء الأوّل، أو صفحة 1-10">
+            </mat-form-field>
+
+
+        </section>
+
+
+
         <button type="submit" class="block large action-btn" mat-raised-button
-            color="{{createGroupForm.form.valid ? 'accent' : ''}}" [disabled]="!createGroupForm.form.valid">إنشاء
-            مجموعة الختمة</button>
+            color="{{createGroupForm.form.valid ? 'accent' : ''}}" [disabled]="!createGroupForm.form.valid">
+
+
+            {{isRecurring ? "إنشاء مجموعة الختمة" : "إنشاء الختمة الجماعيّة"}}
+
+
+
+        </button>
 
     </form>
 
