khitma type split

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,9 +23,9 @@
       <!-- <span class="version">v0.9.9</span> -->
 
 
-      <!-- <a routerLink="about">
+      <a routerLink="about">
         <mat-icon class="help-btn">help_outline</mat-icon>
-      </a> -->
+      </a>
 
     </mat-toolbar>
 
