--- a/src/app/shared/celebration/celebration.component.html
+++ b/src/app/shared/celebration/celebration.component.html
@@ -1,44 +1,91 @@
-<div class="confetti">
+<div class="confetti confetti2">
     <div class="confetti-piece">
         <mat-icon>grade</mat-icon>
     </div>
     <div class="confetti-piece">
         <mat-icon>brightness_3</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>grade</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>brightness_3</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>grade</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>brightness_3</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>grade</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>brightness_3</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>grade</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>brightness_3</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>grade</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>brightness_3</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>grade</mat-icon>
+    </div>
+    <div class="confetti-piece">
+        <mat-icon>brightness_3</mat-icon>
+    </div>
+
+
+</div>
+
+<div class="confetti">
+    <div class="confetti-piece">
+        <label>ما شاء الله عنّك</label>
     </div>
     <div class="confetti-piece">
         <label>بارك الله بك</label>
     </div>
     <div class="confetti-piece">
         <label>جزاك الله خيرا</label>
-
     </div>
     <div class="confetti-piece">
-        <mat-icon>grade</mat-icon>
-    </div>
-    <div class="confetti-piece">
-        <mat-icon>brightness_3</mat-icon>
-    </div>
-    <div class="confetti-piece">
-        <mat-icon>grade</mat-icon>
+        <label>أسعدك الله</label>
     </div>
     <div class="confetti-piece">
         <label>في ميزان حسناتك</label>
-
     </div>
     <div class="confetti-piece">
-        <mat-icon>grade</mat-icon>
-    </div>
-    <div class="confetti-piece">
-        <mat-icon>brightness_3</mat-icon>
-    </div>
-    <div class="confetti-piece">
-        <mat-icon>grade</mat-icon>
+        <label>رضي الله عنك</label>
     </div>
     <div class="confetti-piece">
         <label>تقبّل الله</label>
-
     </div>
     <div class="confetti-piece">
-        <mat-icon>grade</mat-icon>
+        <label>ما شاء الله عنّك</label>
+    </div>
+    <div class="confetti-piece">
+        <label>بارك الله بك</label>
+    </div>
+    <div class="confetti-piece">
+        <label>جزاك الله خيرا</label>
+    </div>
+    <div class="confetti-piece">
+        <label>أسعدك الله</label>
+    </div>
+    <div class="confetti-piece">
+        <label>في ميزان حسناتك</label>
+    </div>
+    <div class="confetti-piece">
+        <label>رضي الله عنك</label>
+    </div>
+    <div class="confetti-piece">
+        <label>تقبّل الله</label>
     </div>
 </div>
